src/js/components/Exercise2/Exercise2.module.scss
.exercise2 {
  border: 2px solid #e7e9e9;
  display: flex;
  flex-flow: row wrap;
  margin: auto;
  max-width: 1200px;

  header {
    border-bottom: 2px solid #e7e9e9;
    padding: 1em;
    width: 100%;

    form {
      display: flex;
      justify-content: space-between;

      .leftSide {
        max-width: 450px;
        width: 100%;
        display: flex;
        flex-flow: row wrap;

        .multiSelect {
          margin: 0 20px 20px 0;
          max-width: 200px;
          width: 100%;
        }

        fieldset {
          border: none;

          label {
            margin-right: 10px;
          }
        }
      }

      .rightSide {
        max-width: 250px;
        text-align: right;
        width: 100%;

        input[type=text] {
          border: 1px solid #e3e4e3;
          color: #555;
          font-size: 16px;
          margin-bottom: 20px;
          padding: 10px;
          width: 80%;

          @media screen and (min-width: 767px) {
            width: 85%;
          }
        }

        button {
          background: transparent;
          border: none;
          cursor: pointer;
          display: block;
          float: right;
          margin: 9px 0 0 -32px;
          position: relative;
          z-index: 2;

          img {
            height: 20px;
            width: 20px;
          }
        }
  
        .clearFilters {
          color: #0d91b9;
          font-weight: bold;
          text-align: right;
          text-transform: uppercase;
        }
      }
    }
  }
}

